# MTH9815_Trading_System

./: CMakeLists.txt  LICENSE  README.md  algoexecutionservice.hpp  algostreamingservice.hpp  executionservice.hpp  guiservice.hpp  historicaldataservice.hpp  inquiryservice.hpp  main.cpp  marketdataservice.hpp  positionservice.hpp  pricingservice.hpp  products.hpp  riskservice.hpp  soa.hpp  streamingservice.hpp  tradebookingservice.hpp  utilities.hpp
data/: inquiries.txt  marketdata.txt  prices.txt  trades.txt
result/: allinquiries.txt  executions.txt  positions.txt  risk.txt  streaming.txt
